# simplemail

./: .cdtproject  .cproject  .cvsignore  .dockerignore  .gitignore  .project  .taglines  .travis.yml  ChangeLog  CreatePOX  Dockerfile  Makefile.am  Makefile.in  Makefile.morphos  README.md  SimpleMail_rev.h  SimpleMail_rev.rev  acconfig.h  account.c  account.h  acinclude.m4  aclocal.m4  addressbook.c  addressbook.h  addresslist.c  addresslist.h  arrays.c  arrays.h  atcleanup.c  atcleanup.h  bayermoore.c  bayermoore.h  boyermoore.c  boyermoore.h  build-dependencies.mk  codecs.c  codecs.h  codesets.c  codesets.h  codesets_table.h  (+137 more)
Charsets/: cp1250.txt  cp1251.txt  cp1252.txt  iso8859-10.txt  koi8-r.txt
amiga-mui/: Makefile.morphos  accountpopclass.c  accountpopclass.h  addressbookwnd.c  addressbookwnd.h  addressentrylistclass.c  addressentrylistclass.h  addressgrouplistclass.c  addressgrouplistclass.h  addressmatchlistclass.c  addressmatchlistclass.h  addressstringclass.c  addressstringclass.h  addresstreelistclass.c  addresstreelistclass.h  amigadebug.h  amigasupport.c  amigasupport.h  amiproc.c  amiproc.h  appicon.c  appicon.h  arch.h  archdebug.c  arexx.c  arexx.h  attachmentlistclass.c  attachmentlistclass.h  audioselectgroupclass.c  audioselectgroupclass.h  compiler.h  composeeditorclass.c  composeeditorclass.h  composewnd.c  composewnd.h  configtreelistclass.c  configtreelistclass.h  configwnd.c  configwnd.h  configwnd_stuff.c  (+96 more)
amiga-mui/ARexx/: CopySelectedMails.smrx  DeleteMails.smrx  ImportMails.smrx  ImportThorMails.smrx  ImportThorUsers.smrx  ImportVCF.smrx  ImportYamMails.smrx  ImportYamUsers.smrx  Translation Tool.info
amiga-mui/ARexx/Translation Tool/: TR_ImportThorMails  TR_ImportThorMails.info  TR_ImportThorUsers  TR_ImportYamMails  TR_ImportYamUsers  TR_maketlsrexx  TR_maketlsrexx.info  maketls.readme  maketls.readme.info  maketls.rexx
amiga-mui/binaries/: .cvsignore  AddAttachment.img  Addressbook.img  AttachmentList.img  Config.img  Copy.img  Cut.img  Delete.img  Drawer.info  Edit.img  Encrypt.img  Filter.img  FilterEdit.img  Group.img  MailDelete.img  MailForward.img  MailGetAddress.img  MailModify.img  MailMove.img  MailNew.img  MailNext.img  MailPrev.img  MailRead.img  MailReply.img  MailSave.img  MailsFetch.img  MailsSend.img  MorphOS_ReadMe.info  MorphOS_SimpleMail.guide.info  MorphOS_SimpleMail.info  MorphOS_SimpleMail_Folder.info  MorphOS_shutdown.img  MorphOS_simplehtml.library  MorphOS_startup.img  Paste.img  Print.img  ReadMe.info  Redo.img  Save.img  Search.img  (+71 more)
amiga-mui/binaries/gettext/: msgmerge  xgettext
amiga-mui/binaries/images/mason-24bit/: MailsSend  addattachment  addattachment_g  addattachment_h  addattachment_s  addressbook_h  attachmentlist  attachmentlist_g  attachmentlist_h  attachmentlist_s  config_g  config_h  config_s  copy_h  cut_h  edit  edit_s  encrypt_g  encrypt_h  encrypt_s  filter  filter_h  filter_s  filteredit  filteredit_g  filteredit_h  filteredit_s  folder_blank  folder_deleted  folder_incoming  folder_other  folder_outgoing  folder_sent  folder_spam  group  group_g  group_h  group_s  images  images.list  (+86 more)
devtools/: gen-stubs.py
doc/amiga/: ReadMe  SimpleMail.guide  history.txt
gtk/: .cvsignore  Makefile.am  Makefile.in  addressbookwnd.c  arch.h  composewnd.c  configwnd.c  dlwnd.c  filterwnd.c  folderwnd.c  gtksupport.c  gtksupport.h  gui_main.c  mainwnd.c  readwnd.c  searchwnd.c  shutdownwnd.c  startupwnd.c  statuswnd.c  subthreads.c  support.c  sysprint.c  sysprint.h  tcpip.c  upwnd.c
homepage/: .cvsignore  contact.html  contact.php  counter.php  download.php  downloads.html  downloads.php  evalcookies.php  faq.html  faq.php  galery.html  galery.php  galery_add_user.html  galery_get_image.php  gallery.php  gallery_add_user.php  gallery_get_image.php  index.html  index.php  language.inc.php  links.html  links.php  main.php  menu.php  news.php  newsheader.html  screenshots.html  screenshots.php  screenshots_preview.php  support.inc.php  welcome.html
homepage/files/: .cvsignore
homepage/galery/: .cvsignore
homepage/xml/: faq.xml  faq.xml.de  faq_de.xml  news.xml  screenshots.xml
indep-include/: .cvsignore  addressbookwnd.h  archdebug.h  composewnd.h  configwnd.h  coroutines_platform.h  dlwnd.h  errorwnd.h  filterwnd.h  folderwnd.h  gui_main.h  mainwnd.h  progmonwnd.h  readwnd.h  request.h  searchwnd.h  shutdownwnd.h  startupwnd.h  statuswnd.h  subthreads-verifiers.h  subthreads.h  support.h  sysprint.h  tcpip.h  timesupport.h  upwnd.h
intl/: .cvsignore  Makefile.in  dcgettext.c  libgettext.h
ncurses/: arch.h  composewnd.c  configwnd.c  filterwnd.c  gadgets.c  gadgets.h  gui_main.c  gui_main_ncurses.h  mainwnd.c  progmonwnd.c  readwnd.c  request.c  searchwnd.c  shutdownwnd.c  startupwnd.c  statuswnd.c  sysprint.c  text_edit_helper.c  text_edit_helper.h
platform/: request_gtk.c  subthreads_glib.c  tcpip_posix.c  timesupport_glib.c
po/: .cvsignore  Makefile.in.in  POTFILES.in  cz.po  da.po  de.po  es.po  fi.po  fr.po  hu.po  it.po  ma.po  pl.po
tests/: .cvsignore  .gitignore  addressbook_unittest.c  arrays_unittest.c  attachment.eml  boyermoore_unittest.c  codesets_unittest.c  configuration_unittest.c  coroutines_unittest.c  edit.c  filter_unittest.c  folder_unittest.c  gadgets_unittest.c  gen-stubs.pl  gen-test-data.py  gen-tests.pl  hash_unittest.c  imap2_unittest.c  imap_helper_unittest.c  imap_unittest.c  index_external_unittest.c  index_unittest.c  logging_unittest.c  mail_unittest.c  makefile  mock_connection.c  pop3_unittest.c  prepare-imap.py  ringbuffer_unittest.c  smock.h  string_lists_unittest.c  string_pools_unittest.c  subthreads_network_unittest.c  support_indep_unittest.c  tcp_unittest.c  test-common.c  test-profile.tar.bz2  test.eml  test_account_unittest.c  text2html_unittest.c  (+1 more)
tests/dovecot-conf/: dovecot.conf  passwd
tests/dovecot-conf/conf.d/: 10-auth.conf  10-chroot.conf  10-logging.conf  10-master.conf  10-ssl.conf
windows/: addressbookwnd.c  dlwnd.c  errorwnd.c  filterwnd.c  gui_main.c  mainwnd.c  subthreads.c  support.c  tcpip.c  upwnd.c
(+19 files in other folders)
