## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libgui.a
INCLUDES = -I. -I$(srcdir)/.. -I$(srcdir)/../indep-include @GUI_CFLAGS@

libgui_a_SOURCES = \
            addressbookwnd.c \
            composewnd.c \
            configwnd.c \
            dlwnd.c \
            errorwnd.c \
            filterwnd.c \
            folderwnd.c \
            gtksupport.c \
            gtksupport.h \
            gui_main.c \
            mainwnd.c \
            readwnd.c \
            subthreads.c \
            support.c \
            tcpip.c \
            upwnd.c

  



